fix onboarding section horizontal scroll

--- a/src/components/section/OnBoardingSection.module.scss
+++ b/src/components/section/OnBoardingSection.module.scss
@@ -2,14 +2,12 @@
   display: flex;
   width: 100%;
   height: 100dvh;
-
-  gap: 100px;
+  overflow-x: hidden;
 
   background: #121217;
   flex-direction: column;
   align-items: center;
   position: relative;
-
 }
 
 .contentContainer {
